static code analysis fixes thanks to sonar and findbugs